--- a/application.yml
+++ b/application.yml
@@ -1,34 +1,14 @@
-server:
-  port: 9999
- 
 spring:
+ profiles:
+    active:
+    - dev
+---
+spring:
+  profiles: dev
   application:
-    name: config-web
-  redis:
-    database: 0
-    host: 127.0.0.1
-    port: 6379
-    password: 
-    pool:
-      max-active: 8
-      max-wait: -1
-      max-idle: 8
-      min-idle: 0
-    timeout: 10000
-  
-eureka:
-  client:
-    service-url:
-      defaultZone : http://127.0.0.1:9502/eureka/
-  
-feign: 
-  name: 
-    pt: grp-busi-server
-ribbon:
-  ReadTimeOut: 120000
-  ConnectTimeOut: 60000
-
-#默认年度
-defaultYear: 2018
-#ui服务名称
-baseUIServerName: config-web
+    name: dev
+---
+spring:
+  profiles: test
+  application:
+    name: test
